# usb_devices_monitor

./: CMakeLists.txt  README.md  conanfile.py
include/: UsbDeviceMonitor.hpp
src/: UsbDeviceMonitor.cpp
test/: LibraryTest.cpp
